--- a/figures/Fit_to_data/config.yml
+++ b/figures/Fit_to_data/config.yml
@@ -17,3 +17,4 @@ grid:
     - 1
     - 1
     url: "/users/18589/articles/304710/master/file/figures/Fit_to_data/Fit_to_data.png"
+    folder_url: "/users/18589/articles/304710/master/folder/figures/Fit_to_data"
