--- a/figures/Residual_plot/config.yml
+++ b/figures/Residual_plot/config.yml
@@ -17,3 +17,4 @@ grid:
     - 1
     - 1
     url: "/users/18589/articles/304710/master/file/figures/Residual_plot/Residual_plot.png"
+    folder_url: "/users/18589/articles/304710/master/folder/figures/Residual_plot"
